Style: implemented initial signup page view

--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,16 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+/*
+.sign_in_container {
+  width: 100%;
+  min-height: 400px;
+  max-width: 420px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+
+} */
+
+
