Fix: implemented hotfix to correctly render single products after logging in

--- a/client/components/AuthForm/index.css
+++ b/client/components/AuthForm/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+/* @import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
 
 * {
 	box-sizing: border-box;
@@ -173,4 +173,4 @@
 
 .social-login__icon:hover {
 	transform: scale(1.5);
-}
+} */
