--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #7bc233;
+  background-color: #212121;
 }
 
 body {
@@ -21,6 +21,11 @@ header {
   background-color: #212121;
 }
 
+.MuiTypography-displayBlock {
+  display: block;
+  background-color: #424242;
+}
+
 h1,
 h2,
 h3,
@@ -28,7 +33,8 @@ h4,
 h5,
 h6,
 span,
-a {
+a,
+p {
   color: #7bc233;
 }
 
