--- a/client/components/AllProducts/index.css
+++ b/client/components/AllProducts/index.css
@@ -25,11 +25,8 @@
   height: 50px;
   border-radius: 4px;
   border: none;
-  background-image: linear-gradient(-225deg, #128a6a 0%, #137e25 100%, #0b0b32 100%);
-  color: #080707;
-  text-size-adjust: 100%;
-  font-size: 16px;
-  font-weight: bold;
+  background-image: linear-gradient(-225deg, #128a6a 0%, #1c9831 100%, #0b0b32 100%);
+  color: #e2e2e2;
 }
 
 
