--- a/client/components/AllProducts/index.css
+++ b/client/components/AllProducts/index.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #f5f5f5;
 }
 .product-search {
   width: 100%;
@@ -26,7 +25,9 @@
   border-radius: 4px;
   border: none;
   background-image: linear-gradient(-225deg, #128a6a 0%, #1c9831 100%, #0b0b32 100%);
-  color: #e2e2e2;
+  color: #090909;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 
