--- a/client/components/AllProducts/index.css
+++ b/client/components/AllProducts/index.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #212121;
+}
+
 .product-app {
   display: flex;
   flex-direction: column;
@@ -11,11 +15,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 2em;
 }
 
 .product-text {
   margin-bottom: 32px;
   text-align: center;
+  font-weight: 300;
 }
 
 .product-input {
@@ -24,12 +30,12 @@
   height: 50px;
   border-radius: 4px;
   border: none;
-  background-image: linear-gradient(-225deg, #128a6a 0%, #1c9831 100%, #0b0b32 100%);
+  background: #4b4a4a;
   color: #090909;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 300;
+  border: 1px solid black;
 }
-
 
 .product-input::placeholder {
   color: #e2e2e2;
