more style cleanup

--- a/client/components/LoginForm/index.css
+++ b/client/components/LoginForm/index.css
@@ -138,7 +138,7 @@ div {
 }
 
 button {
-  background-color: #ffffff !important;
+  background-color: #276d7c !important;
 }
 
 .signin__submit:active,
